--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@ body.custom-background { background-color: #ffffff; }
             </button>
 
             <div class="menu-menu-in-english-container"><ul id="primary-menu" class="nav-menu"><li id="menu-item-100" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-100"><a href="https://thetechcorner.org//" aria-current="page">Home</a></li>
-<li id="menu-item-202" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-202"><a href="https://thetechcorner.org/?page_id=199">Articles</a>
+<li id="menu-item-202" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-202"><a href="https://thetechcorner.sk/articles">Articles</a>
 <ul class="sub-menu">
 	<li id="menu-item-645" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-645"><a href="https://thetechcorner.org/?cat=219">Certifications</a></li>
-	<li id="menu-item-606" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-606"><a href="https://thetechcorner.org/?cat=96">HomeLab</a></li>
+	<li id="menu-item-606" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-606"><a href="https://thetechcorner.sk/articles/homelab">HomeLab</a></li>
 	<li id="menu-item-555" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-555"><a href="https://thetechcorner.org/?cat=208">Linux</a></li>
 	<li id="menu-item-396" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-396"><a href="https://thetechcorner.org/?cat=142">Networking</a></li>
 </ul>
