--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ https://templatemo.com/tm-551-stand-blog
                 <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Blog Entries</a>
+                <a class="nav-link" href="blog.html">Articles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
