--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ https://templatemo.com/tm-551-stand-blog
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="blog.html">Articles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Articles</a>
+                <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Me</a>
