--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,7 @@ https://templatemo.com/tm-551-stand-blog
           <div class="row">
             <div class="col-lg-12">
               <div class="text-content">
-                <h4>contact us</h4>
-                <h2>let’s stay in touch!</h2>
+                <h4>contact me</h4>
               </div>
             </div>
           </div>
@@ -100,7 +99,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-8">
                   <div class="sidebar-item contact-form">
                     <div class="sidebar-heading">
-                      <h2>Send us a message</h2>
+                      <h2>Send me a message</h2>
                     </div>
                     <div class="content">
                       <form id="contact" action="" method="post">
@@ -163,11 +162,6 @@ https://templatemo.com/tm-551-stand-blog
             </div>
           </div>
           
-          <div class="col-lg-12">
-            <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="450px" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-          </div>
           
         </div>
       </div>
