--- a/contact.html
+++ b/contact.html
@@ -142,17 +142,12 @@ https://templatemo.com/tm-551-stand-blog
                     <div class="content">
                       <ul>
                         <li>
-                          <h5>090-484-8080</h5>
+                          <h5>+421915675472</h5>
                           <span>PHONE NUMBER</span>
                         </li>
                         <li>
-                          <h5>info@company.com</h5>
+                          <h5>filipzverec@gmail.com</h5>
                           <span>EMAIL ADDRESS</span>
-                        </li>
-                        <li>
-                          <h5>123 Aenean id posuere dui, 
-                          	<br>Praesent laoreet 10660</h5>
-                          <span>STREET ADDRESS</span>
                         </li>
                       </ul>
                     </div>
@@ -173,19 +168,9 @@ https://templatemo.com/tm-551-stand-blog
         <div class="row">
           <div class="col-lg-12">
             <ul class="social-icons">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Behance</a></li>
+              <li><a href="#">Instagram</a></li>
               <li><a href="#">Linkedin</a></li>
-              <li><a href="#">Dribbble</a></li>
             </ul>
-          </div>
-          <div class="col-lg-12">
-            <div class="copyright-text">
-              <p>Copyright 2020 Stand Blog Co.
-                    
-                 | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
-            </div>
           </div>
         </div>
       </div>
