--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ https://templatemo.com/tm-551-stand-blog
             <img src="assets/images/banner-item-01.jpg" alt="">
             <div class="item-content">
               <div class="main-content">
+                <div class="col-lg-8"></div>
                 <div class="meta-category">
                   <span>Fashion</span>
                 </div>
@@ -121,6 +122,7 @@ https://templatemo.com/tm-551-stand-blog
                   <li><a href="#">36 Comments</a></li>
                 </ul>
               </div>
+            </div>
             </div>
           </div>
           <div class="item">
