--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ https://templatemo.com/tm-551-stand-blog
     <!-- Banner Starts Here -->
     <div class="main-banner header-text">
       <div class="container-fluid">
+        <div class="col-lg-12">
         <div class="owl-banner owl-carousel">
           <div class="item">
             <img src="assets/images/banner-item-01.jpg" alt="">
@@ -154,6 +155,7 @@ https://templatemo.com/tm-551-stand-blog
                   <li><a href="#">72 Comments</a></li>
                 </ul>
               </div>
+            </div>
             </div>
           </div>
         </div>
