--- a/blog.html
+++ b/blog.html
@@ -284,14 +284,13 @@ https://templatemo.com/tm-551-stand-blog
           <div class="col-lg-12">
             <ul class="social-icons">
               <li><a href="#">Instagram</a></li>
+              <li><a href="#">Github</a></li>
               <li><a href="#">Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>Copyright 2020 Stand Blog Co.
-                    
-                 | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
+              <p>Copyright 2022 The Tech Corner</p>
             </div>
           </div>
         </div>
