--- a/blog.html
+++ b/blog.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-551-stand-blog
                 <div class="col-lg-6">
                   <div class="blog-post">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-thumb-03.jpg" alt="">
+                      <img src="../assets/images/blog-thumb-03.jpg" alt="">
                     </div>
                     <div class="down-content">
                       <span>Brrr</span>
