--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@ https://templatemo.com/tm-551-stand-blog
     <section class="blog-posts grid-system">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-sm">
             <div class="all-blog-posts">
               <div class="row">
                 <div class="col">
