--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@ https://templatemo.com/tm-551-stand-blog
           <div class="col-sm">
             <div class="all-blog-posts">
               <div class="row">
-                <div class="col">
+                <div class="col-sm">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="../assets/images/blog-thumb-01.jpg" alt="">
@@ -124,7 +124,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="../assets/images/blog-thumb-02.jpg" alt="">
@@ -151,7 +151,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="../assets/images/blog-thumb-03.jpg" alt="">
@@ -178,7 +178,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-sm">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="../assets/images/blog-thumb-04.jpg" alt="">
