--- a/blog.html
+++ b/blog.html
@@ -204,7 +204,7 @@ https://templatemo.com/tm-551-stand-blog
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col-sm-4">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="../assets/images/blog-thumb-05.jpg" alt="">
@@ -230,7 +230,7 @@ https://templatemo.com/tm-551-stand-blog
                       </div>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-sm-4">
                     <div class="blog-post">
                       <div class="blog-thumb">
                         <img src="../assets/images/blog-thumb-06.jpg" alt="">
