--- a/blog.html
+++ b/blog.html
@@ -256,6 +256,7 @@ https://templatemo.com/tm-551-stand-blog
                         </div>
                       </div>
                     </div>
+                  </div>
                 </div>
 
                 </div>
