--- a/blog.html
+++ b/blog.html
@@ -50,13 +50,11 @@ https://templatemo.com/tm-551-stand-blog
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="../index.html">Home</a>
               </li> 
-              <li class="nav-item">
-                <a class="nav-link" href="../blog.html">Articles
-                  <span class="sr-only">(current)</span>
-                </a>
+              <li class="nav-item active">
+                <a class="nav-link" href="../blog.html">Articles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../about.html">About Me</a>
