--- a/contact.html
+++ b/contact.html
@@ -50,10 +50,8 @@ https://templatemo.com/tm-551-stand-blog
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
-                  <span class="sr-only">(current)</span>
-                </a>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home                </a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Articles</a>
@@ -61,7 +59,7 @@ https://templatemo.com/tm-551-stand-blog
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Me</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
