--- a/blog-categories.html
+++ b/blog-categories.html
@@ -51,16 +51,16 @@ https://templatemo.com/tm-551-stand-blog
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li> 
               <li class="nav-item active">
-                <a class="nav-link" href="../blog.html">Articles</a>
+                <a class="nav-link" href="blog-categories.html">Articles</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../about.html">About Me</a>
+                <a class="nav-link" href="about.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../contact.html">Contact Me</a>
+                <a class="nav-link" href="contact.html">Contact Me</a>
               </li>
             </ul>
           </div>
