--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@ https://templatemo.com/tm-551-stand-blog
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home                </a>
+                <a class="nav-link" href="index.html">Home</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Articles</a>
+                <a class="nav-link" href="blog-categories.html">Articles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Me</a>
