--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-551-stand-blog
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="blog.html">Articles</a>
+                <a class="nav-link" href="blog-categories.html">Articles</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">About Me</a>
