--- a/contact.html
+++ b/contact.html
@@ -158,9 +158,15 @@ https://templatemo.com/tm-551-stand-blog
         <div class="row">
           <div class="col-lg-12">
             <ul class="social-icons">
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Linkedin</a></li>
+              <li><a href="https://www.instagram.com/filip_zverec/">Instagram</a></li>
+              <li><a href="https://github.com/Ard3ny">Github</a></li>
+              <li><a href="https://www.linkedin.com/in/filip-zverec-6487221b9/">Linkedin</a></li>
             </ul>
+          </div>
+          <div class="col-lg-12">
+            <div class="copyright-text">
+              <p>Copyright 2022 The Tech Corner</p>
+            </div>
           </div>
         </div>
       </div>
