--- a/blog-categories.html
+++ b/blog-categories.html
@@ -90,7 +90,7 @@ https://templatemo.com/tm-551-stand-blog
                   <div class="blog-post">
                     <a href="posts/certifications/category-certifications.html">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-thumb-01.jpg" alt="">
+                      <img src="assets/images/certification.png"  class="img-thumbnail">
                     </div>
                     <div class="down-content">
                       <div style="text-align:center">
@@ -110,7 +110,7 @@ https://templatemo.com/tm-551-stand-blog
                   <div class="blog-post">
                     <a href="posts/homelab/category-homelab.html">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-thumb-02.jpg" alt="">
+                      <img src="assets/images/homelab.jpg"  class="img-thumbnail">
                     </div>
                     <div class="down-content">
                       <div style="text-align:center">
@@ -127,10 +127,10 @@ https://templatemo.com/tm-551-stand-blog
                   </div>
                 </div>
                 <div class="col-sm-4">
-                  <div class="blog-post">
+                  <div class="blog-post" style="width:100%" height="width:100%">
                     <a href="posts/linux/category-linux.html">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-thumb-03.jpg" alt="">
+                      <img src="assets/images/linux.jpg" class="img-thumbnail">
                     </div>
                     <div class="down-content">
                       <div style="text-align:center">
@@ -144,7 +144,7 @@ https://templatemo.com/tm-551-stand-blog
                   <div class="blog-post">
                     <a href="posts/networking/category-networking.html">
                     <div class="blog-thumb">
-                      <img src="assets/images/blog-thumb-04.jpg" alt="">
+                      <img src="assets/images/networking.jpg"  class="img-thumbnail">
                     </div>
                     <div class="down-content">
                       <div style="text-align:center">
