deleted banner from main page

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-551-stand-blog
       	
         <div class="row">
           <div class="col-lg-12">
-            <img src="assets/images/about-us.jpg" alt="">
+            <img src="assets/images/about-me.jpg" alt="">
             <p>Hi, my name is Filip Zverec, the founder of The Tech Corner.
 
               I’m a 26-year-old nerd with the Master’s degree in Computer Networking. I’m also working full time as a Linux Administrator for several years now.
