--- a/index.html
+++ b/index.html
@@ -61,67 +61,20 @@ https://templatemo.com/tm-551-stand-blog
 
     <!-- Page Content -->
     <!-- Banner Starts Here -->
-    <div class="main-banner header-text">
-      <div class="container">
-        <div class="col-lg-12">
-        <div class="owl-banner owl-carousel">
-          <div class="item">
-            <a href="posts/certifications/category-certifications.html">
-            <img src="assets/images/banner-item-01.jpg" alt="">
-            <div class="item-content">
-              <div class="main-content">
-                <div class="meta-category">
-                  <div style="text-align:center">
-                    <span>Certifications</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <a href="posts/homelab/category-homelab.html">
-            <img src="assets/images/banner-item-02.jpg" alt="">
-            <div class="item-content">
-              <div class="main-content">
-                <div class="meta-category">
-                  <div style="text-align:center">
-                    <span>HomeLab</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <a href="posts/linux/category-linux.html">
-            <img src="assets/images/banner-item-03.jpg" alt="">
-            <div class="item-content">
-              <div class="main-content">
-                <div class="meta-category">
-                  <div style="text-align:center">
-                    <span>Linux</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <a href="posts/networking/category-networking.html">
-            <img src="assets/images/banner-item-04.jpg" alt="">
-            <div class="item-content">
-              <div class="main-content">
-                <div class="meta-category">
-                  <div style="text-align:center">
-                    <span>Networking</span></a>
-                  </div>
-                </div>
-
+    <div class="heading-page header-text">
+      <section class="page-heading">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="text-content">
+                <h2>Recent posts</h2>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
-  </div>
+    
     <!-- Banner Ends Here -->
 
     
